<resources>
    <string name="appname">Coursera - Agenda</string>
    <string name="onStart">On Start</string>
    <string name="onResume">On Resume</string>
    <string name="onReStart">On Restart</string>
    <string name="onPause">On Pause</string>
    <string name="onStop">On Stop</string>
    <string name="onDestroy">On Destroy</string>
    <string name="onCreate">On Create</string>
    <string name="fName">Fabio Rodriguez</string>
    <string name="fTelefono">614-169-0086</string>
    <string name="fEmail">dissident.mind@gmail.com</string>

    <string name="layName">Nombre</string>
    <string name="layBorn">Nacimiento</string>
    <string name="layEmail">Email</string>
    <string name="layPhone">Telefono</string>
    <string name="layDescr">Descripción</string>

    <string name="titleForm">Registration Form</string>
    <string name="btnNext">Register</string>
    <string name="btnEdit">Edit Info</string>

    <string name="inputN">Test Name</string>
    <string name="inputB">20-58-2016</string>
    <string name="inputE">test@gmail.com</string>
    <string name="inputP">(222)-255-225-15</string>
   <string name="inputD">Text Input</string>

    <string name="date_pick">Fecha de Nacimiento</string>
    <string name="action_settings">Settings</string>

    <string name="layBornDate">dd-mm-yyyy</string>
</resources>