<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.chiri.chiri.courseraagenda.MainActivity"
    android:orientation="vertical"
    android:id="@+id/rl_Container">

        <EditText
            android:id="@+id/inN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/layName"
            />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

       <Button
            android:id="@+id/showDatePickerDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_pick"
            android:onClick="showDatePickerDialog"
           android:gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/selected_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/titleName28"
                android:layout_below="@+id/showDatePickerDialog"
                android:textColor="@color/textPrimary"
                android:textSize="@dimen/titleName18"
                android:textStyle="bold"
                />

        <EditText
            android:id="@+id/showBornDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layBornDate"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/inP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/layPhone"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/inE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/layEmail"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/inD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/layDescr"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="130dp"
        android:layout_gravity="center">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btnNext"
        android:textAlignment="center"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/titleName18"
        android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>