<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.chiri.chiri.courseraagenda.MainDetActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/titleName26"
            android:textStyle="bold"
            android:text="Confirmar Datos"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user_male_48"/>

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layName"
            android:textSize="@dimen/textField"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>

    </LinearLayout>

    <TextView
        android:id="@+id/inN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputN"
        android:textSize="@dimen/titleName24"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/overtime_48"/>
        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layBorn"
            android:textSize="@dimen/textField"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/inE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputE"
        android:textSize="@dimen/titleName24"
        android:layout_below="@id/emailLabel"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/touchscreen_smartphone_48"/>
        <TextView
            android:id="@+id/bornLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layPhone"
            android:textSize="@dimen/textField"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/inB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputB"
        android:textSize="@dimen/titleName24"
        android:layout_below="@id/emailLabel"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/message_48"/>

        <TextView
            android:id="@+id/phoneLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layEmail"
            android:textSize="@dimen/textField"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/inP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputP"
        android:textSize="@dimen/titleName24"
        android:layout_below="@id/emailLabel"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/message_48"/>

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layDescr"
            android:textSize="@dimen/textField"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/inD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputD"
        android:textSize="@dimen/titleName24"
        android:layout_below="@id/emailLabel"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btnEdit"
            android:textAlignment="center"
            android:textColor="@color/textPrimary"
            android:textSize="@dimen/titleName18"
            android:textStyle="bold"
            />

    </LinearLayout>

</LinearLayout>
